# tsuru

./: .dockerignore  .drone.yml  .gitignore  .golangci.yml  .travis-kick  .travis.yml  .yamlfmt  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.build  Dockerfile.dev  Gopkg.toml  INSTALL.md  LICENSE  Makefile  README.md  build-compose.sh  check-fmt.sh  check-handlers.sh  circus.ini  docker-compose.yml  driver61.plist  fabfile.py  go.mod  go.sum  goreleaser.yml  init-webserverd.sh  requirements.txt  staticcheck.conf  test.sh
docs/: .gitignore  Makefile  README.md  add-a-platform.rst  api.rst  architecture.rst  build.rst  community.rst  conf.py  conf.py.c079bf204ab7a8cd955c31185aea2caf.py  config.rst  contribute.rst  docker-centos.rst  docker-node.rst  docker.rst  download.rst  faq.rst  handlers.yml  index.rst  lxc.rst  mkdocs.yml  overview.rst  pyproject.toml  requirements.txt  roadmap.rst  toctree.rst  why.rst
docs/_static/: custom.css
docs/_templates/: base.html  layout.html
docs/advanced_topics/: index.rst  metrics.rst  node_scaling.rst
docs/apps/: deploy-hooks.rst  deployment.rst  quickstart.rst  recovery.rst
docs/contribute/: coding-style.rst  setting-up-your-tsuru-development-environment.rst
docs/contributing/: coding-style.rst  community.rst  compose.rst  index.rst  setting-up-your-tsuru-development-environment.rst  vagrant.rst
docs/developer/: vagrant.rst
docs/docs/: index.md
docs/experimental/: index.rst  installer.rst
docs/install/: client.rst
docs/installing/: Installation-using-makefile.rst  adding-nodes.rst  api.rst  (+11 more)
(+2328 files in other folders)
