[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["tsuru <tsuru@g.globo>"]
readme = "docs/index.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
pymdown-extensions = "^9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
